// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test default 1`] = `
<div>
  Nothing
</div>
`;

exports[`Test with message  1`] = `
<div>
  Hi Roy
</div>
`;

exports[`Test with message  2`] = `
<div>
  <label
    htmlFor="thing-chooser"
  >
    Change Thing
  </label>
  <input
    id="thing-chooser"
    onChange={[Function]}
    value="Hi Roy"
  />
</div>
`;
